# dotfiles

./: .gitconfig  .gitignore  .jjconfig.toml  .tmux.conf  .zshrc  AGENTS.md  README.md  brewfile  code.ahk  global.gitignore  go.mod  go.sum  main.go  md.cli  md.climate  pyproject.toml
.claude/: settings.json
.claude/agents/: counterpart.md  doppelganger.md
.codex/: config.toml
.config/alacritty/: alacritty.toml
.config/espanso/match/: base.yml
.config/ghostty/: config
.config/karabiner/: karabiner.json
.config/micro/: bindings.json  init.lua  settings.json
.config/zed/: settings.json
.config/zsh-abbr/: user-abbreviations
.fleet/: settings.json
.gemini/: settings.json
.hammerspoon/: init.lua
.jupyter/lab/user-settings/@jupyter-lsp/jupyterlab-lsp/: completion.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/codemirror-extension/: plugin.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/completer-extension/: manager.jupyterlab-settings
.jupyter/lab/user-settings/@jupyterlab/shortcuts-extension/: shortcuts.jupyterlab-settings
.local/share/devbox/global/default/: devbox.json
.ssh/: config
.tmux/: keys.conf  reset_keys.conf
.zsh/: aliases.zsh  options.zsh
src/: dotfiles.py
tmux/: keys.conf  reset_keys.conf
vscode/: extensions.json  keybindings.json  settings.json
zsh/: aliases.zsh  completions.zsh  fzf.zsh  keys.zsh  options.zsh  plugins.zsh
